di edit-edit dikitla

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- akhir Carousel -->
 
     <!-- info panel -->
-    <div class="container">
+    <div class="container bagpanel">
             <div id="segitigaabu"></div>
             <div  id='segitiga1'></div>
 
