--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
        <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand border-white" href="../index.html">
-                <img src="../gambar/Koni-Sumut-logo.png" height="80px" width="74px" alt="">
+            <a class="navbar-brand border-white" href="index.html">
+                <img src="gambar/Koni-Sumut-logo.png" height="80px" width="74px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                    <a class="nav-link" href="../index.html"><button type="button" class="btn btn-outline-danger border-white btn-sm tombolberandaolahragapermainan">BERANDA</button></a>
+                    <a class="nav-link" href="index.html"><button type="button" class="btn btn-outline-danger border-white btn-sm tombolberanda">BERANDA</button></a>
                     </li>
 
                     <!-- dropdown koni -->
@@ -52,13 +52,13 @@
                         <button type="button" class="btn btn-outline-danger border-white btn-sm tombolkoni">KONI</button>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="sejarah.html">Sejarah & Profil</a>
+                        <a class="dropdown-item" href="html/sejarah.html">Sejarah & Profil</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Struktur Organisasi</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Pengurus</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="visimisi.html">Visi & Misi</a>
+                        <a class="dropdown-item" href="html/visimisi.html">Visi & Misi</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Program Kerja</a>
                     </div>
@@ -83,10 +83,10 @@
                     <!-- untuk buat dropdown Cabang Olahraga -->
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <button type="button" class="btn btn-outline-danger border-white btn-sm tombolcabangolahragapermainan">CABANG OLAHRAGA</button>
+                            <button type="button" class="btn btn-outline-danger border-white btn-sm tombolkegiatan">CABANG OLAHRAGA</button>
                         </a>
                         <div class="dropdown-menu cabangolahraga" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="olahragapermainan.html">Olahraga Permainan</a>
+                            <a class="dropdown-item" href="html/olahragapermainan.html">Olahraga Permainan</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Olahraga Bela Diri</a>
                             <div class="dropdown-divider"></div>
@@ -106,7 +106,7 @@
                     <div class="dropdown-menu pon" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">PON 2020</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="pon2024.html">PON 2024</a>
+                        <a class="dropdown-item" href="html/pon2024.html">PON 2024</a>
                     </div>
                 </li>
                 
